[UI] Graphic issue with the logo on mobile devices where the top right and bottom right border radius was smaller than the top left and bottom left radius change in the background size and width of the logo

--- a/app/javascript/src/styles/common/navigation.scss
+++ b/app/javascript/src/styles/common/navigation.scss
@@ -24,12 +24,12 @@ nav.navigation {
       // - padding  0.125 * 2 = 0.25
       // - image                3.5
       height: 3.5rem;
-      width: 4rem;
+      width: 3.5rem;
       margin: 0.125rem;
       border-radius: 15px;
   
       background-repeat: no-repeat;
-      background-size: contain;
+      background-size: cover;
       background-position-y: center;
     }
   }
